@@ -238,10 +238,11 @@ public class Configurazione_cnrBulk extends Configurazione_cnrBase {
 
 	public final static String PK_IMPEGNI = "IMPEGNI";
 	public final static String SK_IMPEGNI_PLURIENNALI = "IMPEGNI_PLURIENNALI";
+    public final static String SK_IMPEGNI_ENABLED_ALLEGATI = "IMPEGNI_ENABLED_ALLEGATI";
 
 	public final static String PK_ACCERTAMENTI = "ACCERTAMENTI";
 	public final static String SK_ACCERTAMENTI_PLURIENNALI = "ACCERTAMENTI_PLURIENNALI";
-    public final static String SK_IMPEGNI_ENABLED_ALLEGATI = "IMPEGNI_ENABLED_ALLEGATI";
+
 
 
     public final static String PK_INVENTARIO = "INVENTARIO";
@@ -396,7 +397,7 @@ public class Configurazione_cnrBulk extends Configurazione_cnrBase {
     }
     public void caricaEsercizioList(UserContext usercontext) {
 
-        this.getEsercizioList().put(new Integer(0), new Integer(0));
+        this.getEsercizioList().put(Integer.valueOf(0), Integer.valueOf(0));
         Integer e = CNRUserContext.getEsercizio(usercontext).intValue();
         this.getEsercizioList().put(e, e);
     }
